<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currencyconverterclass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CurrencyConversions">

    <View
        android:id="@+id/rounded_rectangle_view"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/currencyconverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currency_converter"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyconverter"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvZARCurrency"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/zar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/tvEURCurrency"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/eur"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvZARCurrency"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvGBPCurrency"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/gbp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEURCurrency"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCADCurrency"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGBPCurrency"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAUDCurrency"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/aud"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCADCurrency"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etUSDAmount"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/enter_usd_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAUDCurrency"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUSDAmount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/current_exchange_rates_live"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_rectangle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert"
        app:layout_constraintVertical_bias="0.433" />

</androidx.constraintlayout.widget.ConstraintLayout>
