<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dashboard">

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_spinner"
        app:layout_constraintVertical_bias="0" />

    <Spinner
        android:id="@+id/main_spinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <View
        android:id="@+id/rectangle1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintVertical_bias="0.04" />

    <View
        android:id="@+id/rectangle2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle1"
        app:layout_constraintVertical_bias="0.04" />

    <View
        android:id="@+id/rectangle3"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/main_debit_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debit_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle1"
        app:layout_constraintStart_toStartOf="@+id/rectangle1"
        app:layout_constraintTop_toTopOf="@+id/rectangle1"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/main_savings_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savings_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/rectangle2"
        app:layout_constraintTop_toTopOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/main_debit_balance_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_r0_00"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle1"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/rectangle1"
        app:layout_constraintTop_toBottomOf="@+id/main_debit_account_txt"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/main_savings_balance_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_r0_002"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/rectangle2"
        app:layout_constraintTop_toBottomOf="@+id/main_savings_account_txt"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/main_transfer_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_pay_button"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/main_pay_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/main_deposit_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/deposit3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_transfer_button"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/main_logout_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_deposit_button"
        app:layout_constraintVertical_bias="0.843" />

</androidx.constraintlayout.widget.ConstraintLayout>